@@ -1,0 +1,1 @@
+: all lua clean clean-spac install
