@@ -1,0 +1,3 @@
+-lbg
+-llua
+-lbg-sysdeps
