@@ -1,6 +1,8 @@
 -------------------------------------------------------------------------------
 Changes in version 1.20
 
+- Added Lua scripting plugin (optional, build with 'make lua').
+
 - Modified the qmail backend to evaluate $QMAILQUEUE as late as possible.
   This allows more options for changing $QMAILQUEUE in plugins.
 
